--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v13:19.1.0'
     compile 'uk.co.chrisjenx:calligraphy:0.7.+'
     compile files('libs/Parse-1.5.1.jar')
 }
