--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'android'
+apply plugin: 'crashlytics'
+
+repositories {
+    maven { url 'http://download.crashlytics.com/maven' }
+}
+
 
 android {
     compileSdkVersion 19
@@ -26,4 +41,5 @@ dependencies {
     compile 'com.android.support:support-v13:19.1.0'
     compile 'uk.co.chrisjenx:calligraphy:0.7.+'
     compile files('libs/Parse-1.5.1.jar')
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
